# bit

./: .gitignore  .gitmodules  .hlint.yaml  Bit.hs  BitGitRouter.hs  CLAUDE.md  CLAUDE_COLLAB.md  GenGear.hs  LICENSE  README.md  ROADMAP.md  bit.cabal  cabal.project  cabal.project.freeze  file.txt  hie.yaml  test-minio-transfers.sh  test-output.txt  test.ps1  test.sh  test.txt
.claude/: settings.json  settings.local.json
.claude/agents/: resources.json
.claude/hooks/: pre-edit-claim.sh  session-end-cleanup.sh  session-start-init.sh
.cursor/rules/: build-and-test.mdc  build-tool.mdc  commit-messages.mdc  creating-cli-tests.mdc  haskell.mdc  light-style-refactor.mdc  new-module.mdc  old-testing-workflow.mdc  review.mdc  testing-principles.mdc  testing-workflow.mdc
.github/workflows/: ci.yml  release.yml
Bit/: AtomicWrite.hs  CAS.hs  Commands.hs  Concurrency.hs  ConcurrentFileIO.hs  ConcurrentIO.hs  Conflict.hs  CopyProgress.hs  Core.hs  Device.hs  DevicePrompt.hs  Diff.hs  Fsck.hs  Help.hs  Path.hs  Pipeline.hs  Plan.hs  Platform.hs  Process.hs  Progress.hs  Remote.hs  RemoteWorkspace.hs  Scan.hs  Types.hs  Utils.hs  Verify.hs
Bit/CDC/: Config.hs  FastCDC.hs  Gear.hs  Manifest.hs  Reassemble.hs  Store.hs  Types.hs
Bit/Config/: File.hs  Metadata.hs  Paths.hs
Bit/Core/: BecomeGit.hs  CasGc.hs  CasRehash.hs  Config.hs  Conflict.hs  Export.hs  Fetch.hs  GitPassthrough.hs  Helpers.hs  Import.hs  Init.hs  Locks.hs  Pull.hs  Push.hs  RemoteManagement.hs  Submodule.hs  Transport.hs  Verify.hs
Bit/Device/: Identity.hs  Prompt.hs  RemoteWorkspace.hs
Bit/Domain/: Plan.hs
Bit/Effect/: Pure.hs
Bit/Git/: Passthrough.hs  Run.hs
Bit/IO/: AtomicWrite.hs  Concurrency.hs  ConcurrentFileIO.hs  ConcurrentIO.hs  Platform.hs  Process.hs
Bit/Internal/: Metadata.hs
Bit/Progress/: Report.hs
Bit/Rclone/: Progress.hs  Run.hs  Sync.hs
Bit/Remote/: ChunkIndex.hs  PushedBlobsCache.hs  Scan.hs
Bit/Scan/: Fsck.hs  Local.hs  Remote.hs  Verify.hs
Internal/: Config.hs  ConfigFile.hs  Git.hs  Transport.hs
docs/: IMPLEMENTATION-REVIEW.md  SPEC-CONFORMANCE.md  binary-test-suite.md  binary-test-traceability.md  bit-vs-lore.md  compiling-git-test-tool.md  git-compatibility.md  git-test-fix-status.md  git-test-suite-efficiency.md  git-test-suite-report.md  git-test-suite.md  haskell-type-safety.md  idiomatic-haskell.md  large-file-testing.md  launch-kit.md  modules.md  network-test-benchmark.md  remote-commands-tutorial.md  spec.md  t0001-test-status.md  verify-and-repair-tutorial.md  verify-parallelism-benchmark.md
docs/spec/: architecture.md  cdc-spec.md  conflict-resolution.md  design-decisions.md  file-tracking.md  git-compatibility.md  git-export.md  git-import.md  git-test-suite.md  implementation-status.md  index.md  init.md  metadata-remotes.md  modes-and-cas.md  overview.md  push-pull.md  remote-workspace.md  remotes.md  submodule-support.md  verify-repair.md
docs/tutorials/: bare-remotes.md  cloud-remotes.md  config.md  conflict-resolution.md  filesystem-remotes.md  getting-started.md  git-export.md  git-import.md  git-router.md  index.md  metadata-remotes.md  modes-and-cas.md  submodules.md  verify-and-repair.md
scripts/: GenerateLiterate.hs  install-hooks.bat  pre-commit  run-fast-tests.bat
test/: CdcSpec.hs  DevicePromptTests.hs  LintTestFiles.hs  MergeSpec.hs  PipelineSpec.hs  PlanSpec.hs  RunCliTests.hs  RunCliTestsFast.hs
test/cli/: .bit-store  000-cleanup.test  LAYOUT-MODE-COVERAGE.md  README.md  alias.test  bare-push-pull.test  bare-remote.test  bitignore.test  cas-config.test  cas-dedup.test  cas-gc.test  cas-rehash.test  cdc-chunking.test  cdc-default.test  dash-c.test  delete-detection.test  device-prompt.test  e2e-insane.test  export.test  fetch-output.test  filesystem-filemode.test  filesystem-manual-merge.test  filesystem-metadata.test  filesystem-remote-direct.test  force-binary.test  fsck.test  gdrive-remote.test  git-dir-bypass.test  git-router.test  gitattributes-sync.test  gitignore.test  help.test  hydrate.test  import-remotes.test  import.test  init-bare.test  init-compat.test  init-config.test  init-nested.test  init-template-shared.test  (+49 more)
test/cli/work_merge_a/: text.txt
test/cli/work_merge_a/.bit/: config
test/cli/work_merge_a/.bit/cache/: text.txt
test/cli/work_merge_a/.bit/remotes/: origin
test/single-workflows/: cdc-largefile-smoke.hs  test-conflict-resolution.sh  test-metadata-only-remote.sh  test-minio-conflict-binary.sh  test-minio-e2e-timing.sh  test-minio-push-pull.sh  test-minio-rollback.sh  test-multi-remote-binary.sh  test-multi-remote-conflict.sh  test-multi-remote-delete.sh  test-multi-remote-late-add.sh  test-multi-remote-many-files.sh  test-multi-remote-sync.sh  test-multi-remote-three-way.sh
test/t/: run-tests.sh  t0001-binary-add-commit.sh  t0002-binary-status-diff.sh  t0003-binary-merge.sh  t0004-binary-push-pull.sh  t0005-binary-checkout-restore.sh  t0006-binary-stash.sh  t0007-binary-verify.sh  t0008-binary-reset.sh  t0009-binary-cherry-pick-rebase.sh  t0010-binary-log-show.sh  t0011-binary-grep.sh  t0012-binary-diff-rename.sh  t0013-binary-attributes.sh  t0014-binary-apply-patch.sh  t0015-binary-merge-strategies.sh  t0016-binary-diff-advanced.sh  t0017-binary-apply-advanced.sh  t0018-binary-stash-advanced.sh  t0019-binary-grep-advanced.sh  t0020-binary-rebase-advanced.sh  test-lib.sh
