cabal-version:      2.4
name:               bit
version:            0.1.0.0

executable bit
    main-is:          Bit.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
    other-modules:    Bit.AtomicWrite,
                      Bit.Commands,
                      Bit.Help,
                      Bit.Path,
                      Bit.Platform,
                      Bit.Concurrency,
                      Bit.Conflict,
                      Bit.ConcurrentIO,
                      Bit.ConcurrentFileIO,
                      Bit.CopyProgress,
                      Bit.Device,
                      Bit.DevicePrompt,
                      Bit.Process,
                      Bit.Progress,
                      Bit.Utils,
                      Bit.Plan,
                      Bit.Remote,
                      Bit.Remote.Scan,
                      Bit.RemoteWorkspace,
                      Bit.Scan,
                      Bit.Types,
                      Bit.Verify,
                      Bit.Fsck,
                      Bit.Core,
                      Bit.Core.Helpers,
                      Bit.Core.Init,
                      Bit.Core.GitPassthrough,
                      Bit.Core.Fetch,
                      Bit.Core.Transport,
                      Bit.Core.Push,
                      Bit.Core.Pull,
                      Bit.Core.RemoteManagement,
                      Bit.Core.Verify,
                      Internal.Git,
                      Internal.Config,
                      Internal.ConfigFile,
                      Bit.Internal.Metadata,
                      Internal.Transport
    build-depends:    base16-bytestring ^>=1.0.2.0,
                      base,
                      async,
                      directory,
                      uuid ^>=1.3.13,
                      filepath,
                      time,
                      yaml,
                      bytestring,
                      cryptohash-sha256,
                      cryptohash-md5,
                      aeson,
                      process,
                      containers,
                      transformers,
                      text,
                      free,
                      mtl
    if os(windows)
        build-depends: Win32 >= 2.6
    default-language: Haskell2010

executable generate-literate
    main-is:             GenerateLiterate.hs
    hs-source-dirs:      scripts
    ghc-options:         -Wall
    build-depends:       base, directory, filepath, process, bytestring, text
    default-language:    Haskell2010

test-suite cli
    type:                exitcode-stdio-1.0
    main-is:             RunCliTests.hs
    hs-source-dirs:      test
    ghc-options:         -Wall
    build-depends:       base, directory, filepath, process
    default-language:    Haskell2010

test-suite cli-fast
    type:                exitcode-stdio-1.0
    main-is:             RunCliTestsFast.hs
    hs-source-dirs:      test
    ghc-options:         -Wall
    build-depends:       base, directory, filepath, process
    default-language:    Haskell2010

test-suite device-prompt
    type:                exitcode-stdio-1.0
    main-is:             DevicePromptTests.hs
    hs-source-dirs:      test, .
    other-modules:       Bit.DevicePrompt
    ghc-options:         -Wall
    build-depends:       base,
                        directory,
                        tasty,
                        tasty-hunit
    default-language:    Haskell2010

test-suite plan
    type:                exitcode-stdio-1.0
    main-is:             PlanSpec.hs
    hs-source-dirs:      test, .
    other-modules:       Bit.AtomicWrite,
                         Bit.Types,
                         Bit.Plan,
                         Bit.Device,
                         Bit.Path,
                         Bit.Remote,
                         Internal.Git,
                         Internal.Config,
                         Internal.ConfigFile
    ghc-options:         -Wall
    build-depends:       base,
                         containers,
                         text,
                         tasty,
                         tasty-hunit,
                         tasty-quickcheck,
                         QuickCheck,
                         free,
                         transformers,
                         bytestring,
                         base16-bytestring ^>=1.0.2.0,
                         cryptohash-md5,
                         directory,
                         filepath,
                         process,
                         time,
                         uuid ^>=1.3.13
    default-language:    Haskell2010

test-suite generate-literate-docs
    type:                exitcode-stdio-1.0
    main-is:             GenerateLiterate.hs
    hs-source-dirs:      scripts
    ghc-options:         -Wall
    build-depends:       base, process, directory, filepath, bytestring, text
    build-tool-depends:  bit:generate-literate
    default-language:    Haskell2010

test-suite lint-tests
    type:                exitcode-stdio-1.0
    main-is:             LintTestFiles.hs
    hs-source-dirs:      test
    ghc-options:         -Wall
    build-depends:       base,
                         directory,
                         filepath,
                         tasty,
                         tasty-hunit
    default-language:    Haskell2010