cabal-version:      2.4
name:               bit
version:            0.1.0.0

executable bit
    main-is:          Bit.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
    other-modules:    Bit.IO.AtomicWrite,
                      Bit.Commands,
                      Bit.Help,
                      Bit.Path,
                      Bit.IO.Platform,
                      Bit.IO.Concurrency,
                      Bit.Core.Conflict,
                      Bit.IO.ConcurrentIO,
                      Bit.IO.ConcurrentFileIO,
                      Bit.Rclone.Progress,
                      Bit.Device.Identity,
                      Bit.Device.Prompt,
                      Bit.IO.Process,
                      Bit.Progress.Report,
                      Bit.Utils,
                      Bit.Domain.Plan,
                      Bit.Remote,
                      Bit.Scan.Remote,
                      Bit.Device.RemoteWorkspace,
                      Bit.Scan.Local,
                      Bit.Types,
                      Bit.Scan.Verify,
                      Bit.Scan.Fsck,
                      Bit.Core,
                      Bit.Core.Helpers,
                      Bit.Core.Init,
                      Bit.Git.Passthrough,
                      Bit.Core.Fetch,
                      Bit.Rclone.Sync,
                      Bit.Core.Push,
                      Bit.Core.Pull,
                      Bit.Core.RemoteManagement,
                      Bit.Core.Verify,
                      Bit.Git.Run,
                      Bit.Config.Paths,
                      Bit.Config.File,
                      Bit.Config.Metadata,
                      Bit.Rclone.Run
    build-depends:    base16-bytestring ^>=1.0.2.0,
                      base,
                      async,
                      directory,
                      uuid ^>=1.3.13,
                      filepath,
                      time,
                      yaml,
                      bytestring,
                      cryptohash-sha256,
                      cryptohash-md5,
                      aeson,
                      process,
                      containers,
                      transformers,
                      text,
                      free,
                      mtl
    if os(windows)
        build-depends: Win32 >= 2.6
    default-language: Haskell2010

executable generate-literate
    main-is:             GenerateLiterate.hs
    hs-source-dirs:      scripts
    ghc-options:         -Wall
    build-depends:       base, directory, filepath, process, bytestring, text
    default-language:    Haskell2010

test-suite cli
    type:                exitcode-stdio-1.0
    main-is:             RunCliTests.hs
    hs-source-dirs:      test
    ghc-options:         -Wall
    build-depends:       base, directory, filepath, process
    default-language:    Haskell2010

test-suite cli-fast
    type:                exitcode-stdio-1.0
    main-is:             RunCliTestsFast.hs
    hs-source-dirs:      test
    ghc-options:         -Wall
    build-depends:       base, directory, filepath, process
    default-language:    Haskell2010

test-suite device-prompt
    type:                exitcode-stdio-1.0
    main-is:             DevicePromptTests.hs
    hs-source-dirs:      test, .
    other-modules:       Bit.Device.Prompt
    ghc-options:         -Wall
    build-depends:       base,
                        directory,
                        tasty,
                        tasty-hunit
    default-language:    Haskell2010

test-suite plan
    type:                exitcode-stdio-1.0
    main-is:             PlanSpec.hs
    hs-source-dirs:      test, .
    other-modules:       Bit.IO.AtomicWrite,
                         Bit.Types,
                         Bit.Domain.Plan,
                         Bit.Device.Identity,
                         Bit.Path,
                         Bit.Remote,
                         Bit.Git.Run,
                         Bit.Config.Paths,
                         Bit.Config.File
    ghc-options:         -Wall
    build-depends:       base,
                         containers,
                         text,
                         tasty,
                         tasty-hunit,
                         tasty-quickcheck,
                         QuickCheck,
                         free,
                         transformers,
                         bytestring,
                         base16-bytestring ^>=1.0.2.0,
                         cryptohash-md5,
                         directory,
                         filepath,
                         process,
                         time,
                         uuid ^>=1.3.13
    default-language:    Haskell2010

test-suite generate-literate-docs
    type:                exitcode-stdio-1.0
    main-is:             GenerateLiterate.hs
    hs-source-dirs:      scripts
    ghc-options:         -Wall
    build-depends:       base, process, directory, filepath, bytestring, text
    build-tool-depends:  bit:generate-literate
    default-language:    Haskell2010

test-suite lint-tests
    type:                exitcode-stdio-1.0
    main-is:             LintTestFiles.hs
    hs-source-dirs:      test
    ghc-options:         -Wall
    build-depends:       base,
                         directory,
                         filepath,
                         tasty,
                         tasty-hunit
    default-language:    Haskell2010